-changed uppercase letter to lowercase -changed the way to initialise a hashset to maintain a consistent style