@@ -1,5 +1,6 @@
 package factory;
 
+import java.util.Collections;
 import java.util.Set;
 
 
@@ -7,7 +8,7 @@ public class CATaxCalculator implements TaxCalculator
 {
 	private static final double SALES_TAX_RATE = 0.0975; // California sales tax rate (9.75%)
 
-	private static final Set<String> SALES_TAX_EXEMPT_CATEGORIES = Set.of("food");
+	private static final Set<String> SALES_TAX_EXEMPT_CATEGORIES = Collections.singleton("food");
 
 	@Override
 	public double calculateSalesTax(double price, int qty, String itemCategory)
